force-app/main/default/objects/ChangeCaseOwner__Max_Button_Queues_Setting__c/fields/ChangeCaseOwner__Filter_Field__c.field-meta.xml
<CustomField>
    <fullName>ChangeCaseOwner__Filter_Field__c</fullName>
    <label>Filter Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>