force-app/main/default/objects/ChangeCaseOwner__Max_Button_Queues_Setting__c/fields/ChangeCaseOwner__Max_Button_Queues__c.field-meta.xml
<CustomField>
    <fullName>ChangeCaseOwner__Max_Button_Queues__c</fullName>
    <label>Max Button Queues</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>