force-app/main/default/objects/ChangeCaseOwner__Max_Button_Queues_Setting__c/fields/ChangeCaseOwner__Send_Notification_Email_Unchecked__c.field-meta.xml
<CustomField>
    <fullName>ChangeCaseOwner__Send_Notification_Email_Unchecked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Notification Email Unchecked</label>
    <type>Checkbox</type>
</CustomField>